--- a/Lecture 10 - Decision Trees/lec10/lecture10-_trees_v1.Rmd
+++ b/Lecture 10 - Decision Trees/lec10/lecture10-_trees_v1.Rmd
@@ -2,7 +2,7 @@
 title: "Decision Trees v.01"
 author: "Lazaro Alonso"
 date: "6/30/2020"
-output: html_document
+output: html_notebook
 ---
 
 ```{r setup, include=FALSE}
