--- a/Lecture 10 - Decision Trees/lecture10-_trees_v1.Rmd
+++ b/Lecture 10 - Decision Trees/lecture10-_trees_v1.Rmd
@@ -139,7 +139,7 @@ And now we can plot the trees (inverted trees actually).
 ### - Option 1. 
 
 ```{r}
-rpart.plot(survived_verse$fit, roundint=FALSE)
+rpart.plot(survived_verse$fit, type = 2, roundint=FALSE)
 ```
 
 Each node shows
@@ -175,6 +175,7 @@ Play a little bit with this parameter, __cp__, and see how our results change.
 ```{r}
 ptitanic[1:3,]
 ```
+
 ```{r}
 rpart.predict(survived, newdata=ptitanic[1:3,], rules=TRUE)
 ```
@@ -189,12 +190,10 @@ rpart.rules(survived)
 
 # Carseats data
 
-- Independet work: work with the __Carseats__ dataset, install the __ISLR__ package. 
-
 ```{r}
 library(ISLR)
 #data(package="ISLR")
-carseats <- Carseats
+carseats <- Carseats %>% as_tibble()
 str(carseats)
 ```
 Observe that __Sales__ is a quantitative variable (show this with a plot). You want to demonstrate it using trees with a binary response. To do so, you turn __Sales__ into a binary variable, which will be called High. If the sales is less than 8, it will be not high. Otherwise, it will be high. Then you can put that new variable High back into the dataframe.
@@ -211,8 +210,10 @@ hist(carseats$Sales)
 
 
 ```{r}
-High <-  ifelse(carseats$Sales<=8, "No", "Yes")
-carseats <-  data.frame(carseats, High)
+carseats <- carseats %>% 
+  mutate(
+    High = as.factor(ifelse(carseats$Sales<=8, "No", "Yes"))
+  )
 summary(carseats)
 ```
 
@@ -242,7 +243,6 @@ rpart.plot(tree.carseats$fit, type = 4,roundint=FALSE)
 
 
 # Iris dataset
-- Activity 2. Obtain the decission tree for the _iris_ data set. 
 
 ```{r}
 iris
@@ -250,7 +250,7 @@ iris
 
 ```{r}
 model_tree3 <-
-  decision_tree() %>%
+  decision_tree(cost_complexity = 0.01) %>%
   set_engine("rpart") %>%
   set_mode("classification") %>% 
   translate()
